--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello!!!
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Tech Store</title>
+    </head>
+    <body>
+        hello
+    </body>
+</html>
