--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <title>Tech Store</title>
     </head>
     <body>
-        hello!!!
+        <h1>Tech Store</h1>
+        <h2>Shop by:</h2>
+        <h3>Category</h3>
+        <h3>Price ($)</h3>
+
+        <h2>All items:</h2>
     </body>
 </html>
