--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
         <title>Tech Store</title>
     </head>
     <body>
-        <h1>Tech Store</h1>
-        <h2>Shop by:</h2>
-        <h3>Category</h3>
-        <h3>Price ($)</h3>
-
-        <h2>All items:</h2>
+        <div>
+            <h1>Tech Store</h1>
+        </div>
+        <div>
+            <h2>Shop by:</h2>
+            <h3>Category</h3>
+            <h3>Price <span>($)</span></h3>
+        </div>
+        <div>
+            <h2>All items:</h2>
+        </div>
     </body>
 </html>
