Adding paragraphs and text

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         </div>
         <div>
             <h2>All items:</h2>
+            <div>
+                <h4>Game Controller</h4>
+                <p>$ 79.95</p>
+                <p>Awesome game controller<br> for xbox!</p>
+            </div>
         </div>
     </body>
 </html>
