--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <body>
         <div>
             <h1>Tech Store</h1>
+            <ol>
+                <li>home</li>
+                <li>shop</li>
+                <ul>
+                    <li>nested item</li>
+                    <li>nested item 2</li>
+                </ul>
+                <li>contact us</li>
+            </ol>
         </div>
         <div>
             <h2>Shop by:</h2>
