--- a/index.html
+++ b/index.html
@@ -7,20 +7,33 @@
     <body>
         <div>
             <h1>Tech Store</h1>
-            <ol>
+            <ul>
                 <li>home</li>
                 <li>shop</li>
-                <ul>
-                    <li>nested item</li>
-                    <li>nested item 2</li>
-                </ul>
                 <li>contact us</li>
-            </ol>
+            </ul>
         </div>
         <div>
             <h2>Shop by:</h2>
             <h3>Category</h3>
+            <hr>
+            <ul>
+                <li>All items</li>
+                <li>Cameras</li>
+                <li>Laptops</li>
+                <li>Phones</li>
+                <li>Acessories</li>
+                <li>Other</li>
+            </ul>
             <h3>Price <span>($)</span></h3>
+            <hr>
+            <ul>
+                <li>1 - 9</li>
+                <li>10 - 29</li>
+                <li>30 - 59</li>
+                <li>60 - 99</li>
+                <li>100+</li>
+            </ul>
         </div>
         <div>
             <h2>All items:</h2>
@@ -29,6 +42,13 @@
                 <p>$ 79.95</p>
                 <p>Awesome game controller<br> for xbox!</p>
             </div>
+        </div>
+        <div>
+            <ul>
+                <li>home</li>
+                <li>shop</li>
+                <li>contact us</li>
+            </ul>
         </div>
     </body>
 </html>
