--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div>
             <h2>All items:</h2>
             <div>
+                <img src="images/controller.jpg" alt="game controller picture" width="300">
                 <h4>Game Controller</h4>
                 <p>$ 79.95</p>
                 <p>Awesome game controller<br> for xbox!</p>
