--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <div>
             <h1>Tech Store</h1>
             <ul>
-                <li>home</li>
-                <li>shop</li>
-                <li>contact us</li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="">shop</a></li>
+                <li><a href="contact.html">contact us</a></li>
             </ul>
         </div>
         <div>
@@ -38,7 +38,9 @@
         <div>
             <h2>All items:</h2>
             <div>
-                <img src="images/controller.jpg" alt="game controller picture" width="300">
+                <a href="product-detail.html">
+                    <img src="images/controller.jpg" alt="game controller picture">
+                </a>
                 <h4>Game Controller</h4>
                 <p>$ 79.95</p>
                 <p>Awesome game controller<br> for xbox!</p>
@@ -46,9 +48,9 @@
         </div>
         <div>
             <ul>
-                <li>home</li>
-                <li>shop</li>
-                <li>contact us</li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="">shop</a></li>
+                <li><a href="contact.html">contact us</a></li>
             </ul>
         </div>
     </body>
