--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                 <h4>Game Controller</h4>
                 <p>$ 79.95</p>
                 <p>Awesome game controller<br> for xbox!</p>
+                <a href="product-detail.html">More Info</a>
+                <a href="">Add To Cart</a>
             </div>
         </div>
         <div>
