--- a/index.html
+++ b/index.html
@@ -5,37 +5,43 @@
         <title>Tech Store</title>
     </head>
     <body>
-        <div>
+        <header>
             <h1>Tech Store</h1>
-            <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="">shop</a></li>
-                <li><a href="contact.html">contact us</a></li>
-            </ul>
-        </div>
-        <div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="">shop</a></li>
+                    <li><a href="contact.html">contact us</a></li>
+                </ul>
+            </nav>
+        </header>
+        <aside>
             <h2>Shop by:</h2>
-            <h3>Category</h3>
-            <hr>
-            <ul>
-                <li>All items</li>
-                <li>Cameras</li>
-                <li>Laptops</li>
-                <li>Phones</li>
-                <li>Acessories</li>
-                <li>Other</li>
-            </ul>
-            <h3>Price <span>($)</span></h3>
-            <hr>
-            <ul>
-                <li>1 - 9</li>
-                <li>10 - 29</li>
-                <li>30 - 59</li>
-                <li>60 - 99</li>
-                <li>100+</li>
-            </ul>
-        </div>
-        <div>
+            <secton>
+                <h3>Category</h3>
+                <hr>
+                <ul>
+                    <li>All items</li>
+                    <li>Cameras</li>
+                    <li>Laptops</li>
+                    <li>Phones</li>
+                    <li>Acessories</li>
+                    <li>Other</li>
+                </ul>
+            </secton>
+            <section>
+                <h3>Price <span>($)</span></h3>
+                <hr>
+                <ul>
+                    <li>1 - 9</li>
+                    <li>10 - 29</li>
+                    <li>30 - 59</li>
+                    <li>60 - 99</li>
+                    <li>100+</li>
+                </ul>
+            </section>
+        </aside>
+        <main>
             <h2>All items:</h2>
             <div>
                 <a href="product-detail.html">
@@ -47,13 +53,15 @@
                 <a href="product-detail.html">More Info</a>
                 <a href="">Add To Cart</a>
             </div>
-        </div>
-        <div>
-            <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="">shop</a></li>
-                <li><a href="contact.html">contact us</a></li>
-            </ul>
-        </div>
+        </main>
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="">shop</a></li>
+                    <li><a href="contact.html">contact us</a></li>
+                </ul>
+            </nav>
+        </footer>
     </body>
 </html>
