--- a/index.html
+++ b/index.html
@@ -43,16 +43,66 @@
         </aside>
         <main>
             <h2>All items:</h2>
-            <div>
+            <section>
                 <a href="product-detail.html">
                     <img src="images/controller.jpg" alt="game controller picture">
                 </a>
                 <h4>Game Controller</h4>
                 <p>$ 79.95</p>
-                <p>Awesome game controller<br> for xbox!</p>
+                <p>Awesome game controller<br>for xbox!</p>
                 <a href="product-detail.html">More Info</a>
                 <a href="">Add To Cart</a>
-            </div>
+            </section>
+            <section>
+                <a href="product-detail.html">
+                    <img src="images/headphones.jpg" alt="white headphones picture">
+                </a>
+                <h4>White headphones</h4>
+                <p>$ 54.95</p>
+                <p>Awesome white<br>headphones</p>
+                <a href="product-detail.html">More Info</a>
+                <a href="">Add To Cart</a>
+            </section>
+            <section>
+                <a href="product-detail.html">
+                    <img src="images/camera.jpg" alt="canon camera picture">
+                </a>
+                <h4>Canon camera</h4>
+                <p>$649.95</p>
+                <p>Awesome camera<br>by Canon!</p>
+                <a href="product-detail.html">More Info</a>
+                <a href="">Add To Cart</a>
+            </section>
+            <section>
+                <a href="product-detail.html">
+                    <img src="images/microphone.jpg" alt="microphone  picture">
+                </a>
+                <h4>Microphone</h4>
+                <p>$119.95</p>
+                <p>Awesome Blue<br>Yeti Microphone!</p>
+                <a href="product-detail.html">More Info</a>
+                <a href="">Add To Cart</a>
+            </section>
+            <section>
+                <a href="product-detail.html">
+                    <img src="images/cables.jpg" alt="cables picture">
+                </a>
+                <h4>Cables</h4>
+                <p>$ 10.95</p>
+                <p>Awesome cables available<br>in different lengths!</p>
+                <a href="product-detail.html">More Info</a>
+                <a href="">Add To Cart</a>
+            </section>
+            <section>
+                <a href="product-detail.html">
+                    <img src="images/lenses.jpg" alt="camera lenses picture">
+                </a>
+                <h4>Camera lenses</h4>
+                <p>$ 99.95</p>
+                <p>Awesome camera<br>lenses!</p>
+                <a href="product-detail.html">More Info</a>
+                <a href="">Add To Cart</a>
+            </section>
         </main>
         <footer>
             <nav>
