--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <title>Tech Store</title>
     </head>
     <body>
+
+        <!--
+            TODO:
+            1/ Create shop.html page
+            2/ Add CSS styling
+        -->
         <header>
             <h1>Tech Store</h1>
             <nav>
@@ -41,6 +47,8 @@
                 </ul>
             </section>
         </aside>
+
+        <!-- Main section to display products: -->
         <main>
             <h2>All items:</h2>
             <section>
