--- a/product-detail.html
+++ b/product-detail.html
@@ -1,1 +1,7 @@
-product detail page
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Product Detail Page</title>
+    </head>
+</html>
