HTML entities and symbols

--- a/product-detail.html
+++ b/product-detail.html
@@ -4,4 +4,15 @@
         <meta charset="UTF-8">
         <title>Product Detail Page</title>
     </head>
+    <body>
+        <header>
+
+        </header>
+        <main>
+
+        </main>
+        <footer>
+            
+        </footer>
+    </body>
 </html>
