--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a href="product-detail.html">
                     <img src="images/controller.jpg" alt="game controller picture">
                 </a>
-                <h4><a href="product-detail.html">Game Controller</a></h4>
+                <h4><a href="product-detail.html">Game Controller</a> &#127918;</h4>
                 <p>$ 79.95</p>
                 <p>Awesome game controller<br>for xbox!</p>
                 <a href="product-detail.html">More Info</a>
