Product detail page

--- a/product-detail.html
+++ b/product-detail.html
@@ -2,17 +2,64 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Product Detail Page</title>
+        <title>Tech Store: Product detail</title>
     </head>
     <body>
         <header>
-
+            <h1>Tech Store</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="">shop</a></li>
+                    <li><a href="contact.html">contact us</a></li>
+                </ul>
+            </nav>
         </header>
+        <aside>
+            <h2>Shop by:</h2>
+            <section>
+                <h3>Category</h3>
+                <hr>
+                <ul>
+                    <li>All items</li>
+                    <li>Cameras</li>
+                    <li>Laptops</li>
+                    <li>Phones</li>
+                    <li>Accessories</li>
+                    <li>Other</li>
+                </ul>
+            </section>
+            <section>
+                <h3>Price <span>($)</span></h3>
+                <hr>
+                <ul>
+                    <li>1 - 9</li>
+                    <li>10 - 29</li>
+                    <li>30 - 59</li>
+                    <li>60 - 99</li>
+                    <li>100+</li>
+                </ul>
+            </section>
+        </aside>
         <main>
-
+            <h2>Product detail:</h2>
+            <section>
+                <img src="images/controller.jpg" alt="game controller picture">
+                <h4>Game controller</h4>
+                <p>$ 79.95</p>
+                <p>Awesome game controller<br>for xbox!</p>
+                <a href="">More Info</a>
+                <a href="">Add To Cart</a>
+            </section>
         </main>
         <footer>
-            
+            <nav>
+                <ul>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="">shop</a></li>
+                    <li><a href="contact.html">contact us</a></li>
+                </ul>
+            </nav>
         </footer>
     </body>
 </html>
