--- a/product-detail.html
+++ b/product-detail.html
@@ -51,6 +51,28 @@
                 <a href="">More Info</a>
                 <a href="">Add To Cart</a>
             </section>
+
+            <table>
+                <caption><em>Buy in bulk and save!</em></caption>
+                <thead>
+                    <tr>
+                        <th>Quantity</th>
+                        <th>1</th>
+                        <th>2 - 3</th>
+                        <th>5 - 10</th>
+                        <th>10+</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Price</td>
+                        <td>79.95</td>
+                        <td>78.95</td>
+                        <td>76.95</td>
+                        <td>74.95</td>
+                    </tr>
+                </tbody>
+            </table>
         </main>
         <footer>
             <nav>
