--- a/product-detail.html
+++ b/product-detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Tech Store: Product detail</title>
+        <title>Tech Store: Product Detail</title>
     </head>
     <body>
         <header>
@@ -42,7 +42,7 @@
             </section>
         </aside>
         <main>
-            <h2>Product detail:</h2>
+            <h2>Product Detail:</h2>
             <section>
                 <img src="images/controller.jpg" alt="game controller picture">
                 <h4>Game controller</h4>
