--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,68 @@
-contact us page
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Tech Store: Contact Us</title>
+    </head>
+    <body>
+        <header>
+            <h1>Tech Store</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="">shop</a></li>
+                    <li><a href="contact.html">contact us</a></li>
+                </ul>
+            </nav>
+        </header>
+        <aside>
+           <h2>Shop by:</h2>
+           <section>
+               <h3>Category</h3>
+               <hr>
+               <ul>
+                    <li>All items</li>
+                    <li>Cameras</li>
+                    <li>Laptops</li>
+                    <li>Phones</li>
+                    <li>Accessories</li>
+                    <li>Other</li>
+                </ul>
+           </section>
+           <section>
+               <h3>Price <span>($)</span></h3>
+               <hr>
+               <ul>
+                    <li>1 - 9</li>
+                    <li>10 - 29</li>
+                    <li>30 - 59</li>
+                    <li>60 - 99</li>
+                    <li>100+</li>
+                </ul>
+           </section>
+        </aside>
+        <main>
+            <h2>Contact Us:</h2>
+
+            <form>
+                <div>
+                    Name: <input type="text" placeholder="Enter your name">
+                </div>
+                <div>
+                    Email: <input type="email" placeholder="Enter your email">
+                </div>
+                <div>
+                    Message: <textarea cols="30" rows="5"></textarea>
+                </div>
+            </form>
+        </main>
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="">shop</a></li>
+                    <li><a href="contact.html">contact us</a></li>
+                </ul>            
+        </footer>
+    </body>
+</html>
