--- a/contact.html
+++ b/contact.html
@@ -46,13 +46,13 @@
 
             <form>
                 <div>
-                    Name: <input type="text" placeholder="Enter your name">
+                    <label for="name">Name:</label><input type="text" placeholder="Enter your name" id="name" name="name">
                 </div>
                 <div>
-                    Email: <input type="email" placeholder="Enter your email">
+                    <label for="email">Email:</label><input type="email" placeholder="Enter your email" id="email" name="email">
                 </div>
                 <div>
-                    Message: <textarea cols="30" rows="5"></textarea>
+                    <label for="message">Message:</label><textarea cols="30" rows="5" id="message" name="message"></textarea>
                 </div>
             </form>
         </main>
