Checkboxes and radio buttons

--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,25 @@
                 <div>
                     <label for="message">Message:</label><textarea cols="30" rows="5" id="message" name="message"></textarea>
                 </div>
+                <div>
+                    <p>Subscribe to future offres by:</p>
+                    <label for="newsletter">Newsletter</label>
+                    <input type="checkbox" id="newsletter" name="subscribe" value="newsletter">
+                    
+                    <label for="email">Email</label>
+                    <input type="checkbox" id="email" name="subscribe" value="email">
+                    
+                    <label for="post">Post</label>
+                    <input type="checkbox" id="post" name="subscribe" value="post">
+                </div>
+                <div>
+                    <p>How would you like for us to respond?</p>
+                    <label for="phoneResponse">Phone</label>
+                    <input type="radio" id="phoneResponse" name="response" value="phone">
+
+                    <label for="emailResponse">Email</label>
+                    <input type="radio" id="emailResponse" name="response" value="email">
+                </div>
             </form>
         </main>
         <footer>
