--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                     <textarea cols="30" rows="5" id="message" name="message"></textarea>
                 </div>
 
-                <div>
+                <!-- <div>
                     <label for="subject">Subject:</label>
                     <select id="subject">
                         <optgroup label="Product issues">
@@ -76,6 +76,19 @@
                             <option value="other">Other</option>
                         </optgroup>
                     </select>
+                </div> -->
+
+                <div>
+                    <label for="subject">Subject:</label>
+                    <input type="text" list="subjects" id="subject" placeholder="Enter your subject">
+                    <datalist id="subjects">
+                        <option value="returns">
+                        <option value="faulty item">
+                        <option value="delivery">
+                        <option value="order tracking">
+                        <option value="advice">
+                        <option value="other">
+                    </datalist>
                 </div>
 
                 <div>
@@ -97,6 +110,12 @@
 
                     <label for="emailResponse">Email</label>
                     <input type="radio" id="emailResponse" name="response" value="email">
+                </div>
+
+                <div>
+                    <input type="submit">
+                    <input type="reset">
+                    <!-- <button type="submit">Send message</button> -->
                 </div>
             </form>
         </main>
