--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="contact.html">contact us</a></li>
                 </ul>
             </nav>
+            <input type="search" placeholder="search...">
         </header>
         <aside>
             <h2>Shop by:</h2>
