--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             1/ Create shop.html page
             2/ Add CSS styling
         -->
-        <header>
+        <header style="background: #333a40; color: white;">
             <h1>Tech Store</h1>
             <nav>
                 <ul>
@@ -108,7 +108,7 @@
                 <a href="">Add To Cart</a>
             </section>
         </main>
-        <footer>
+        <footer style="background: #333a40; color: white;">
             <nav>
                 <ul>
                     <li><a href="index.html">home</a></li>
