--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <title>Tech Store</title>
+
+        <style>
+            html {
+                background: #f7f7f7;
+            }
+
+            body {
+                background: white;
+                max-width: 1000px;
+                margin: 0 auto;
+            }
+
+            header, footer {
+                background: #333a40;
+                color: white;
+            }
+        </style>
     </head>
     <body>
 
@@ -11,7 +28,7 @@
             1/ Create shop.html page
             2/ Add CSS styling
         -->
-        <header style="background: #333a40; color: white;">
+        <header>
             <h1>Tech Store</h1>
             <nav>
                 <ul>
@@ -108,7 +125,7 @@
                 <a href="">Add To Cart</a>
             </section>
         </main>
-        <footer style="background: #333a40; color: white;">
+        <footer>
             <nav>
                 <ul>
                     <li><a href="index.html">home</a></li>
