--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Tech Store: Contact Us</title>
+    
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
