--- a/index.html
+++ b/index.html
@@ -4,22 +4,7 @@
         <meta charset="UTF-8">
         <title>Tech Store</title>
 
-        <style>
-            html {
-                background: #f7f7f7;
-            }
-
-            body {
-                background: white;
-                max-width: 1000px;
-                margin: 0 auto;
-            }
-
-            header, footer {
-                background: #333a40;
-                color: white;
-            }
-        </style>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
 
@@ -49,7 +34,7 @@
                     <li>Cameras</li>
                     <li>Laptops</li>
                     <li>Phones</li>
-                    <li>Acessories</li>
+                    <li>Accessories</li>
                     <li>Other</li>
                 </ul>
             </secton>
