--- a/product-detail.html
+++ b/product-detail.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Tech Store: Product Detail</title>
+    
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
