--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Tech Store: Contact Us</title>
-    
+
+        <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
