Classes and IDs

--- a/product-detail.html
+++ b/product-detail.html
@@ -47,7 +47,7 @@
         </aside>
         <main>
             <h2>Product Detail:</h2>
-            <section>
+            <section class="product">
                 <img src="images/controller.jpg" alt="game controller picture">
                 <h4>Game controller</h4>
                 <p>$ 79.95</p>
