Float and clear

--- a/product-detail.html
+++ b/product-detail.html
@@ -47,7 +47,7 @@
         </aside>
         <main>
             <h2>Product Detail:</h2>
-            <section class="product">
+            <section class="product product-detail">
                 <img src="images/controller.jpg" alt="game controller picture">
                 <h4>Game controller</h4>
                 <p>$ 79.95</p>
@@ -78,6 +78,7 @@
                 </tbody>
             </table>
         </main>
+
         <footer>
             <nav>
                 <ul>
