Styling forms and inputs

--- a/contact.html
+++ b/contact.html
@@ -49,17 +49,17 @@
             <h2>Contact Us:</h2>
 
             <form>
-                <div>
+                <div class="inline">
                     <label for="name">Name:</label>
                     <input type="text" placeholder="Enter your name" id="name" name="name">
                 </div>
 
-                <div>
+                <div class="inline">
                     <label for="email">Email:</label>
                     <input type="email" placeholder="Enter your email" id="email" name="email">
                 </div>
 
-                <div>
+                <div class="inline">
                     <label for="message">Message:</label>
                     <textarea cols="30" rows="5" id="message" name="message"></textarea>
                 </div>
@@ -82,7 +82,7 @@
                     </select>
                 </div> -->
 
-                <div>
+                <div class="inline">
                     <label for="subject">Subject:</label>
                     <input type="text" list="subjects" id="subject" placeholder="Enter your subject">
                     <datalist id="subjects">
