Final project styling

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                     <input type="email" placeholder="Enter your email" id="email" name="email">
                 </div>
 
-                <div class="inline">
+                <div class="inline>
                     <label for="message">Message:</label>
                     <textarea cols="30" rows="5" id="message" name="message"></textarea>
                 </div>
