--- a/product-detail.html
+++ b/product-detail.html
@@ -57,7 +57,7 @@
             </section>
 
             <table>
-                <caption><em>Buy in bulk and save!</em></caption>
+                <caption>Buy in bulk and save!</caption>
                 <thead>
                     <tr>
                         <th>Quantity</th>
